--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>CodeCats</title>
+    <title>Welcome to BelleKaiJH Project</title>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -39,21 +39,21 @@
         </div>
         <div class="menu">
           <a
-            href="https://discord.gg/A9CnsVzzkZ"
+            href="https://discord.gg/Ws2QBdBz"
             target="_blank"
             rel="noopener noreferrer"
           >
             <img src="images/header/discord.webp" alt="Discord" />
           </a>
           <a
-            href="https://twitter.com/codeSTACKr"
+            href="https://twitter.com/"
             target="_blank"
             rel="noopener noreferrer"
           >
             <img src="images/header/twitter.webp" alt="Twitter" />
           </a>
           <a
-            href="https://opensea.io/collection/codecats"
+            href="https://opensea.io/collection/BelleKaiJH"
             target="_blank"
             rel="noopener noreferrer"
           >
@@ -69,9 +69,9 @@
     <section class="container not-connected">
       <div>
         <h2 id="welcomeH2">Connect to MetaMask to Get Started</h2>
-        <h1 id="welcomeH1">Welcome to the CodeCats NFT Project!</h1>
+        <h1 id="welcomeH1">Welcome to BelleKaiJH NFT Project!</h1>
         <p id="welcomeP">
-          The CodeCats NFT Project is a decentralized, open-source project that aims to demonstrate how to develope and launch your own NFT Collection. Follow step by step on the <a href="https://youtube.com/codestackr"  target="_blank" rel="noopener noreferrer">codeSTACKr</a> YouTube channel.
+          BelleKaiJH NFT Project is a decentralized, open-source project that aims to demonstrate how to develope and launch your own NFT Collection. Follow step by step on the <a href="https://youtube.com/codestackr"  target="_blank" rel="noopener noreferrer">codeSTACKr</a> YouTube channel.
         </p>
       </div>
     </section>
@@ -118,7 +118,7 @@
           <div class="info-container">
             <div>
               <h3>Supply</h3>
-              <p id="totalSupply">100</p>
+              <p id="totalSupply">1000</p>
             </div>
             <div>
               <h3>Price Per Mint</h3>
